fix collapse/expand

--- a/jsontree.css
+++ b/jsontree.css
@@ -1,19 +1,29 @@
 ul.jstList {
-  padding-left: 10px;
+  padding-left: 15px;
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
 }
 li.jstItem {
-  padding-left: 10px;
+  padding-left: 0px;
   list-style: none;
 }
+.jstCollapse {
+  margin-left: -15px;
+  position: absolute;
+  -webkit-user-select: none;
+  user-select: none;
+}
 
+.jstCollapse a {
+  text-decoration: none;
+  color: inherit;
+}
 
-.jstValue {
+.jstTree {
   font-size: 12px;
   font-weight: 400;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+  font-family: monospace;
 }
 
 .jstProperty {
